Update to 21w37a
- Removed PaperMC's per-player-spawns in favor of vanilla's.
- Optimized vanilla's per-player-spawns.
- Improved compatibility in SpawnHelper.
-